src/modules/dashboard/components/ColonyHome/ColonyTitle/ColonyTitle.css
.main {
  display: block;
  margin: 0 -40px 50px;
  padding-top: 15px;
  text-align: right;
}

.wrapper {
  display: inline-block;
  width: 225px;
  text-align: left;
}

.colonyTitle {
  padding: 0 0 0 4px;
}

.colonyTitle h3 {
  /*
   * @NOTE We can't compose from `inlineEllipsis` here since we're inside an
   * element, not a component :(
   */
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: var(--dark);
  letter-spacing: 0px;
  cursor: default;
}

.colonyMenu {
  composes: flexContainerRow flexAlignCenter from '~styles/layout.css';
  margin-top: -4px;
}

.colonyAddress {
  padding: 4px 5px;
  height: 24px;
  border-radius: var(--radius-normal);
  text-align: center;
  line-height: var(--size-smallish);
  color: var(--temp-grey-blue-7);
  cursor: pointer;
  user-select: none;
  outline: 0;
}

.colonyAddress:hover {
  background-color: color-mod(var(--colony-blue) alpha(10%));
  color: var(--colony-blue);
}

